// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/create_post Show tutorial 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <div
    className="post-create"
  >
    <div
      className="post-create-body"
    >
      <div
        aria-label="message input complimentary region"
        className="post-body__cell a11y__region"
        data-a11y-sort-order="2"
        id="centerChannelFooter"
        role="application"
        tabIndex={-1}
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          characterLimit={4000}
          createMessage="Write to "
          disabled={false}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="post_textbox"
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          onSelect={[Function]}
          preview={false}
          useChannelMentions={true}
          value=""
        />
        <FormattingBar
          applyMarkdown={[Function]}
          isOpen={false}
          value=""
        />
        <span
          className="post-body__actions --top"
        >
          <ShowFormat
            onClick={[Function]}
          />
        </span>
        <span
          className="post-body__actions --bottom"
        >
          <ToggleFormattingBar
            onClick={[Function]}
          />
          <Connect(injectIntl(FileUpload))
            channelId="owsyt8n43jfxjpzh9np93mx1wa"
            fileCount={0}
            getTarget={[Function]}
            onFileUpload={[Function]}
            onFileUploadChange={[Function]}
            onUploadError={[Function]}
            onUploadProgress={[Function]}
            onUploadStart={[Function]}
            postType="post"
          />
          <EmojiPickerOverlay
            enableGifPicker={true}
            onEmojiClick={[Function]}
            onEmojiClose={[Function]}
            onGifClick={[Function]}
            onHide={[Function]}
            show={false}
            spaceRequiredAbove={476}
            spaceRequiredBelow={497}
            target={[Function]}
            topOffset={-7}
          />
          <button
            aria-label="emoji picker"
            className="emoji-picker__container post-action"
            id="emojiPickerButton"
            onClick={[Function]}
            type="button"
          >
            <EmoticonOutlineIcon
              color="currentColor"
              size={18}
            />
          </button>
          <button
            aria-label="Send a message"
            className="btn btn-primary send-button theme disabled hidden"
            disabled={true}
            onClick={[Function]}
            tabIndex={0}
          >
            <SendIcon
              aria-label="Create a post"
              color="currentColor"
              size={18}
            />
          </button>
        </span>
      </div>
    </div>
    <div
      className="post-create-footer"
      id="postCreateFooter"
      role="form"
    >
      <div
        className="d-flex justify-content-between"
      >
        <Connect(MsgTyping)
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          postId=""
        />
        <Connect(TextboxLinks)
          hasExceededCharacterLimit={false}
          hasText={false}
          showPreview={false}
          updatePreview={[Function]}
        />
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`components/create_post should match snapshot for center textbox 1`] = `
<form
  className="center"
  id="create_post"
  onSubmit={[Function]}
>
  <div
    className="post-create"
  >
    <div
      className="post-create-body"
    >
      <div
        aria-label="message input complimentary region"
        className="post-body__cell a11y__region"
        data-a11y-sort-order="2"
        id="centerChannelFooter"
        role="application"
        tabIndex={-1}
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          characterLimit={4000}
          createMessage="Write to "
          disabled={false}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="post_textbox"
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          onSelect={[Function]}
          preview={false}
          useChannelMentions={true}
          value=""
        />
        <FormattingBar
          applyMarkdown={[Function]}
          isOpen={false}
          value=""
        />
        <span
          className="post-body__actions --top"
        >
          <ShowFormat
            onClick={[Function]}
          />
        </span>
        <span
          className="post-body__actions --bottom"
        >
          <ToggleFormattingBar
            onClick={[Function]}
          />
          <Connect(injectIntl(FileUpload))
            channelId="owsyt8n43jfxjpzh9np93mx1wa"
            fileCount={0}
            getTarget={[Function]}
            onFileUpload={[Function]}
            onFileUploadChange={[Function]}
            onUploadError={[Function]}
            onUploadProgress={[Function]}
            onUploadStart={[Function]}
            postType="post"
          />
          <EmojiPickerOverlay
            enableGifPicker={true}
            onEmojiClick={[Function]}
            onEmojiClose={[Function]}
            onGifClick={[Function]}
            onHide={[Function]}
            show={false}
            spaceRequiredAbove={476}
            spaceRequiredBelow={497}
            target={[Function]}
            topOffset={-7}
          />
          <button
            aria-label="emoji picker"
            className="emoji-picker__container post-action"
            id="emojiPickerButton"
            onClick={[Function]}
            type="button"
          >
            <EmoticonOutlineIcon
              color="currentColor"
              size={18}
            />
          </button>
          <button
            aria-label="Send a message"
            className="btn btn-primary send-button theme disabled hidden"
            disabled={true}
            onClick={[Function]}
            tabIndex={0}
          >
            <SendIcon
              aria-label="Create a post"
              color="currentColor"
              size={18}
            />
          </button>
        </span>
      </div>
    </div>
    <div
      className="post-create-footer"
      id="postCreateFooter"
      role="form"
    >
      <div
        className="d-flex justify-content-between"
      >
        <Connect(MsgTyping)
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          postId=""
        />
        <Connect(TextboxLinks)
          hasExceededCharacterLimit={false}
          hasText={false}
          showPreview={false}
          updatePreview={[Function]}
        />
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`components/create_post should match snapshot when cannot post 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <div
    className="post-create"
  >
    <div
      className="post-create-body"
    >
      <div
        aria-label="message input complimentary region"
        className="post-body__cell a11y__region"
        data-a11y-sort-order="2"
        id="centerChannelFooter"
        role="application"
        tabIndex={-1}
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          characterLimit={4000}
          createMessage="This channel is read-only. Only members with permission can post here."
          disabled={true}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="post_textbox"
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          onSelect={[Function]}
          preview={false}
          useChannelMentions={true}
          value=""
        />
        <FormattingBar
          applyMarkdown={[Function]}
          isOpen={false}
          value=""
        />
        <span
          className="post-body__actions --top"
        />
        <span
          className="post-body__actions --bottom"
        >
          <button
            aria-label="Send a message"
            className="btn btn-primary send-button theme disabled hidden"
            disabled={true}
            onClick={[Function]}
            tabIndex={0}
          >
            <SendIcon
              aria-label="Create a post"
              color="currentColor"
              size={18}
            />
          </button>
        </span>
      </div>
    </div>
    <div
      className="post-create-footer"
      id="postCreateFooter"
      role="form"
    >
      <div
        className="d-flex justify-content-between"
      >
        <Connect(MsgTyping)
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          postId=""
        />
        <Connect(TextboxLinks)
          hasExceededCharacterLimit={false}
          hasText={false}
          isMarkdownPreviewEnabled={false}
          showPreview={false}
          updatePreview={[Function]}
        />
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`components/create_post should match snapshot when file upload disabled 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <div
    className="post-create post-create--attachment-disabled"
  >
    <div
      className="post-create-body"
    >
      <div
        aria-label="message input complimentary region"
        className="post-body__cell a11y__region"
        data-a11y-sort-order="2"
        id="centerChannelFooter"
        role="application"
        tabIndex={-1}
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          characterLimit={4000}
          createMessage="Write to "
          disabled={false}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="post_textbox"
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          onSelect={[Function]}
          preview={false}
          useChannelMentions={true}
          value=""
        />
        <FormattingBar
          applyMarkdown={[Function]}
          isOpen={false}
          value=""
        />
        <span
          className="post-body__actions --top"
        >
          <ShowFormat
            onClick={[Function]}
          />
        </span>
        <span
          className="post-body__actions --bottom"
        >
          <ToggleFormattingBar
            onClick={[Function]}
          />
          <Connect(injectIntl(FileUpload))
            channelId="owsyt8n43jfxjpzh9np93mx1wa"
            fileCount={0}
            getTarget={[Function]}
            onFileUpload={[Function]}
            onFileUploadChange={[Function]}
            onUploadError={[Function]}
            onUploadProgress={[Function]}
            onUploadStart={[Function]}
            postType="post"
          />
          <EmojiPickerOverlay
            enableGifPicker={true}
            onEmojiClick={[Function]}
            onEmojiClose={[Function]}
            onGifClick={[Function]}
            onHide={[Function]}
            show={false}
            spaceRequiredAbove={476}
            spaceRequiredBelow={497}
            target={[Function]}
            topOffset={-7}
          />
          <button
            aria-label="emoji picker"
            className="emoji-picker__container post-action"
            id="emojiPickerButton"
            onClick={[Function]}
            type="button"
          >
            <EmoticonOutlineIcon
              color="currentColor"
              size={18}
            />
          </button>
          <button
            aria-label="Send a message"
            className="btn btn-primary send-button theme disabled hidden"
            disabled={true}
            onClick={[Function]}
            tabIndex={0}
          >
            <SendIcon
              aria-label="Create a post"
              color="currentColor"
              size={18}
            />
          </button>
        </span>
      </div>
    </div>
    <div
      className="post-create-footer"
      id="postCreateFooter"
      role="form"
    >
      <div
        className="d-flex justify-content-between"
      >
        <Connect(MsgTyping)
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          postId=""
        />
        <Connect(TextboxLinks)
          hasExceededCharacterLimit={false}
          hasText={false}
          showPreview={false}
          updatePreview={[Function]}
        />
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`components/create_post should match snapshot, can post; preview disabled 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <div
    className="post-create"
  >
    <div
      className="post-create-body"
    >
      <div
        aria-label="message input complimentary region"
        className="post-body__cell a11y__region"
        data-a11y-sort-order="2"
        id="centerChannelFooter"
        role="application"
        tabIndex={-1}
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          characterLimit={4000}
          createMessage="Write to "
          disabled={false}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="post_textbox"
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          onSelect={[Function]}
          preview={false}
          useChannelMentions={true}
          value=""
        />
        <FormattingBar
          applyMarkdown={[Function]}
          isOpen={false}
          value=""
        />
        <span
          className="post-body__actions --top"
        >
          <ShowFormat
            onClick={[Function]}
          />
        </span>
        <span
          className="post-body__actions --bottom"
        >
          <ToggleFormattingBar
            onClick={[Function]}
          />
          <Connect(injectIntl(FileUpload))
            channelId="owsyt8n43jfxjpzh9np93mx1wa"
            fileCount={0}
            getTarget={[Function]}
            onFileUpload={[Function]}
            onFileUploadChange={[Function]}
            onUploadError={[Function]}
            onUploadProgress={[Function]}
            onUploadStart={[Function]}
            postType="post"
          />
          <EmojiPickerOverlay
            enableGifPicker={true}
            onEmojiClick={[Function]}
            onEmojiClose={[Function]}
            onGifClick={[Function]}
            onHide={[Function]}
            show={false}
            spaceRequiredAbove={476}
            spaceRequiredBelow={497}
            target={[Function]}
            topOffset={-7}
          />
          <button
            aria-label="emoji picker"
            className="emoji-picker__container post-action"
            id="emojiPickerButton"
            onClick={[Function]}
            type="button"
          >
            <EmoticonOutlineIcon
              color="currentColor"
              size={18}
            />
          </button>
          <button
            aria-label="Send a message"
            className="btn btn-primary send-button theme disabled hidden"
            disabled={true}
            onClick={[Function]}
            tabIndex={0}
          >
            <SendIcon
              aria-label="Create a post"
              color="currentColor"
              size={18}
            />
          </button>
        </span>
      </div>
    </div>
    <div
      className="post-create-footer"
      id="postCreateFooter"
      role="form"
    >
      <div
        className="d-flex justify-content-between"
      >
        <Connect(MsgTyping)
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          postId=""
        />
        <Connect(TextboxLinks)
          hasExceededCharacterLimit={false}
          hasText={false}
          showPreview={false}
          updatePreview={[Function]}
        />
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`components/create_post should match snapshot, can post; preview enabled 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <div
    className="post-create"
  >
    <div
      className="post-create-body"
    >
      <div
        aria-label="message input complimentary region"
        className="post-body__cell a11y__region"
        data-a11y-sort-order="2"
        id="centerChannelFooter"
        role="application"
        tabIndex={-1}
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          characterLimit={4000}
          createMessage="Write to "
          disabled={false}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="post_textbox"
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          onSelect={[Function]}
          preview={false}
          useChannelMentions={true}
          value=""
        />
        <FormattingBar
          applyMarkdown={[Function]}
          isOpen={false}
          value=""
        />
        <span
          className="post-body__actions --top"
        >
          <ShowFormat
            onClick={[Function]}
          />
        </span>
        <span
          className="post-body__actions --bottom"
        >
          <ToggleFormattingBar
            onClick={[Function]}
          />
          <Connect(injectIntl(FileUpload))
            channelId="owsyt8n43jfxjpzh9np93mx1wa"
            fileCount={0}
            getTarget={[Function]}
            onFileUpload={[Function]}
            onFileUploadChange={[Function]}
            onUploadError={[Function]}
            onUploadProgress={[Function]}
            onUploadStart={[Function]}
            postType="post"
          />
          <EmojiPickerOverlay
            enableGifPicker={true}
            onEmojiClick={[Function]}
            onEmojiClose={[Function]}
            onGifClick={[Function]}
            onHide={[Function]}
            show={false}
            spaceRequiredAbove={476}
            spaceRequiredBelow={497}
            target={[Function]}
            topOffset={-7}
          />
          <button
            aria-label="emoji picker"
            className="emoji-picker__container post-action"
            id="emojiPickerButton"
            onClick={[Function]}
            type="button"
          >
            <EmoticonOutlineIcon
              color="currentColor"
              size={18}
            />
          </button>
          <button
            aria-label="Send a message"
            className="btn btn-primary send-button theme disabled hidden"
            disabled={true}
            onClick={[Function]}
            tabIndex={0}
          >
            <SendIcon
              aria-label="Create a post"
              color="currentColor"
              size={18}
            />
          </button>
        </span>
      </div>
    </div>
    <div
      className="post-create-footer"
      id="postCreateFooter"
      role="form"
    >
      <div
        className="d-flex justify-content-between"
      >
        <Connect(MsgTyping)
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          postId=""
        />
        <Connect(TextboxLinks)
          hasExceededCharacterLimit={false}
          hasText={false}
          showPreview={false}
          updatePreview={[Function]}
        />
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`components/create_post should match snapshot, cannot post; preview disabled 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <div
    className="post-create"
  >
    <div
      className="post-create-body"
    >
      <div
        aria-label="message input complimentary region"
        className="post-body__cell a11y__region"
        data-a11y-sort-order="2"
        id="centerChannelFooter"
        role="application"
        tabIndex={-1}
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          characterLimit={4000}
          createMessage="This channel is read-only. Only members with permission can post here."
          disabled={true}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="post_textbox"
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          onSelect={[Function]}
          preview={false}
          useChannelMentions={true}
          value=""
        />
        <FormattingBar
          applyMarkdown={[Function]}
          isOpen={false}
          value=""
        />
        <span
          className="post-body__actions --top"
        />
        <span
          className="post-body__actions --bottom"
        >
          <button
            aria-label="Send a message"
            className="btn btn-primary send-button theme disabled hidden"
            disabled={true}
            onClick={[Function]}
            tabIndex={0}
          >
            <SendIcon
              aria-label="Create a post"
              color="currentColor"
              size={18}
            />
          </button>
        </span>
      </div>
    </div>
    <div
      className="post-create-footer"
      id="postCreateFooter"
      role="form"
    >
      <div
        className="d-flex justify-content-between"
      >
        <Connect(MsgTyping)
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          postId=""
        />
        <Connect(TextboxLinks)
          hasExceededCharacterLimit={false}
          hasText={false}
          isMarkdownPreviewEnabled={false}
          showPreview={false}
          updatePreview={[Function]}
        />
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`components/create_post should match snapshot, cannot post; preview enabled 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <div
    className="post-create"
  >
    <div
      className="post-create-body"
    >
      <div
        aria-label="message input complimentary region"
        className="post-body__cell a11y__region"
        data-a11y-sort-order="2"
        id="centerChannelFooter"
        role="application"
        tabIndex={-1}
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          characterLimit={4000}
          createMessage="This channel is read-only. Only members with permission can post here."
          disabled={true}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="post_textbox"
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          onSelect={[Function]}
          preview={false}
          useChannelMentions={true}
          value=""
        />
        <FormattingBar
          applyMarkdown={[Function]}
          isOpen={false}
          value=""
        />
        <span
          className="post-body__actions --top"
        />
        <span
          className="post-body__actions --bottom"
        >
          <button
            aria-label="Send a message"
            className="btn btn-primary send-button theme disabled hidden"
            disabled={true}
            onClick={[Function]}
            tabIndex={0}
          >
            <SendIcon
              aria-label="Create a post"
              color="currentColor"
              size={18}
            />
          </button>
        </span>
      </div>
    </div>
    <div
      className="post-create-footer"
      id="postCreateFooter"
      role="form"
    >
      <div
        className="d-flex justify-content-between"
      >
        <Connect(MsgTyping)
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          postId=""
        />
        <Connect(TextboxLinks)
          hasExceededCharacterLimit={false}
          hasText={false}
          isMarkdownPreviewEnabled={false}
          showPreview={false}
          updatePreview={[Function]}
        />
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`components/create_post should match snapshot, init 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <div
    className="post-create"
  >
    <div
      className="post-create-body"
    >
      <div
        aria-label="message input complimentary region"
        className="post-body__cell a11y__region"
        data-a11y-sort-order="2"
        id="centerChannelFooter"
        role="application"
        tabIndex={-1}
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          characterLimit={4000}
          createMessage="Write to "
          disabled={false}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="post_textbox"
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          onSelect={[Function]}
          preview={false}
          useChannelMentions={true}
          value=""
        />
        <FormattingBar
          applyMarkdown={[Function]}
          isOpen={false}
          value=""
        />
        <span
          className="post-body__actions --top"
        >
          <ShowFormat
            onClick={[Function]}
          />
        </span>
        <span
          className="post-body__actions --bottom"
        >
          <ToggleFormattingBar
            onClick={[Function]}
          />
          <Connect(injectIntl(FileUpload))
            channelId="owsyt8n43jfxjpzh9np93mx1wa"
            fileCount={0}
            getTarget={[Function]}
            onFileUpload={[Function]}
            onFileUploadChange={[Function]}
            onUploadError={[Function]}
            onUploadProgress={[Function]}
            onUploadStart={[Function]}
            postType="post"
          />
          <EmojiPickerOverlay
            enableGifPicker={true}
            onEmojiClick={[Function]}
            onEmojiClose={[Function]}
            onGifClick={[Function]}
            onHide={[Function]}
            show={false}
            spaceRequiredAbove={476}
            spaceRequiredBelow={497}
            target={[Function]}
            topOffset={-7}
          />
          <button
            aria-label="emoji picker"
            className="emoji-picker__container post-action"
            id="emojiPickerButton"
            onClick={[Function]}
            type="button"
          >
            <EmoticonOutlineIcon
              color="currentColor"
              size={18}
            />
          </button>
          <button
            aria-label="Send a message"
            className="btn btn-primary send-button theme disabled hidden"
            disabled={true}
            onClick={[Function]}
            tabIndex={0}
          >
            <SendIcon
              aria-label="Create a post"
              color="currentColor"
              size={18}
            />
          </button>
        </span>
      </div>
    </div>
    <div
      className="post-create-footer"
      id="postCreateFooter"
      role="form"
    >
      <div
        className="d-flex justify-content-between"
      >
        <Connect(MsgTyping)
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          postId=""
        />
        <Connect(TextboxLinks)
          hasExceededCharacterLimit={false}
          hasText={false}
          showPreview={false}
          updatePreview={[Function]}
        />
      </div>
      <div />
    </div>
  </div>
</form>
`;
